		Planner: fixed lesson ordering bug in unit dump
		Planner: simplified interface of Unit Planner
		Rubrics: added course/class name to historical view result listing
		School Admin: fixed bug preventing non-contiguous primary external assessment settings from being saved in Formal Assessment settings
		School Admin: increased length of grade scale short name to 5 chars
		Staff: adjusted role drop down to offer all Staff roles (from gibbonRole), not just Teaching & Support
		Students: added year group to New Students report when using Date Range setting
		Students: added All Students filter persistence to Back To Search link on student details page
		Students: made more fields searchable in full profile
		Students: fixed bug preventing student images from showing up on History tab of student profile
		Students: added Student History into Overview page of full student profile
		Students: improved SEN options, and ability to have a referee, in application form
		Students: added parent email to search in View Student Profile
		Students: made country of birth and citizenship compulsory fields in Application Form
		Students: fixed missing student image in some profile sub pages
		Timetable: fixed rendering to allow Sunday as first day or the week, according to values in gibbonDaysOfWeek
		Timetable: fixed rendering bug preventing some time labels from being displayed
		Timetable: made "Back To Search" link persistent when timetable controls used
		Timetable: added ability for department coordinator to manage facility changes within their department
		Timetable: fixed facility booking display output when viewing timetable by facility
		Tracking: adjusted Data Points export to combine multiple column internal assessments for one subject into a column
		User Admin: added notification to form tutor(s) when a student's privacy options change (via Edit or Data Update).
		User Admin: made max_input_vars test a little more generous